products showpage clean-up/incomplete

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -29,10 +29,10 @@
       </div>
 
 
-      <div class= "row">
+      <div class= "row ">
 
 
-        <div class="star-rating">
+        <div class="star-rating col-sm-12 col-md-12 co-md-12">
           <p>Review score:<div id="average-rating" class="rated" data-score="<%= @product.average_rating %>"></p>
           </div>
 
