products form stylesheet and bootstrap cleanup/incomplete

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Product</h1>
+  <div class = "margin">
+   <h1>Editing Product</h1>
 
-<%= render 'shared/form', product: @product %>
+   <%= render 'shared/form', product: @product %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+   <%= link_to 'Show', @product %> |
+   <%= link_to 'Back', products_path %>
+  </div>
