--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,7 @@
+<div class= "margin">
 <h1>New Product</h1>
 
 <%= render 'shared/form', product: @product %>
 
-<%= link_to 'Back', products_path %>
+<div class= "back"><%= link_to 'Back', products_path %></div>
+</div>
