--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -154,6 +154,11 @@
  .body-rating {padding-top: 10px;}
 
  .product { text-align: center;}
+ .back {margin: 30px 0 0 30px; }
+ .actions {padding: 20px 30px 30px 30px;
+ float: right;}
+ .field {text-align: center;
+ padding-top: 20px;}
 
  /*Footer Section*/
 
