--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,7 +4,7 @@
 
       <div class="col-sm-12 col-md-6 col-lg-6">
         <%= image_tag(@product.image_url, width: "350", class: "img-fluid img-zoom", data_zoom_image:"@product.image_url") if @product.image_url%>
-        <% if signed_in? && current_user.admin? %><%= link_to 'Edit', edit_product_path(@product) %><% end %>
+      <%= link_to 'Edit', edit_product_path(@product) %>
 
         <% cache @product do %>
         <p>
