new product form page clean-up/incomplete

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -116,7 +116,7 @@
 
  /*Landing-page */
 
-
+ .landing-page {padding-top: 50px;}
  .landing-name {
    padding: 0px 0px 350px 30px;
    float: left;
@@ -127,9 +127,6 @@
    color: white;
    font-weight: 900;
  }
-
-.alerts {padding-top: 35px;}
-.alert p {padding-top: 25px;}
 
  .form-fld{ width: 300px;}
 
