--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -16,3 +16,15 @@
 .submit-button {margin: 30px 0px 0px 40px;}
 
 .send-button { padding-bottom: 40px;}
+
+#carousel h5 {
+  font-size: 4em;
+  padding-bottom: 30%;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+#carousel { padding-top: 20px;}
+#carousel img {
+    border: none;
+    border-radius: 0%;
+}
