--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,29 +2,19 @@
 <html>
 <head>
   <title>Vacation destinations</title>
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-
-
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script> -->
-
-  <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script> -->
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <%= render 'layouts/rails_default' %>
+  <%= render 'layouts/shim' %>
 
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-
 </head>
 
-<body data-spy="scroll" data-target=".navbar" class="bgimg-2">
 
- <%= render 'shared/nav' %>
+<body>
+  <div class="container">
+   <%= render 'layouts/nav' %>
+  </div>
 
 
           <% if notice %>
@@ -34,11 +24,16 @@
 
           <%= yield %>
           <footer class="container-fluid footer-section">
-            <section class="text-center">
-
-              <p> &copy;2019 Dath Consulting</p>
-
-            </section>
+            <small>
+              KLAD Consulting
+            </small>
+            <nav>
+              <ul>
+                <li><%= link_to "About", simple_pages_about_path %></li>
+                <li><%= link_to "Contact", simple_pages_contact_path %></li>
+                <li><a href="http://news.railstutorial.org/">News</a></li>
+              </ul>
+            </nav>
           </footer>
 
 
