--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,8 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
+
     <%= link_to "Rollhouse", root_path, id: "logo" %>
-    <nav>
+    <nav class="links">
       <ul class="nav navbar-nav navbar-right">
         <li> <%= link_to "Products", products_path %>
           <li> <%= link_to "About", simple_pages_about_path %></li>
