--- a/app/views/layouts/_nav_short-text.html.erb
+++ b/app/views/layouts/_nav_short-text.html.erb
@@ -1,31 +1,31 @@
-<header class="navbar navbar-fixed-top navbar-inverse full-text">
+<header class="navbar navbar-fixed-top navbar-inverse short-text">
   <div class="container">
 
     <%= link_to "Rollhouse", root_path, id: "logo" %>
     <nav class="links">
       <ul class="nav navbar-nav navbar-right">
-        <li> <%= link_to "Products", products_path %>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          <i class="fas fa-home"></i></i><b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li> <%= link_to "Products", products_path %>
           <li> <%= link_to "About", simple_pages_about_path %></li>
           <li> <%= link_to "My Orders", orders_path %></li>
           <li> <%= link_to "Contact", simple_pages_contact_path %>
             <% if user_signed_in? %>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Account <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
+
                 <li><%= link_to "Profile", '#'  %></li>
                 <li><%= link_to "Settings", '#' %></li>
                 <li class="divider"></li>
                 <li>
                   <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
                 </li>
-              </ul>
-            </li>
             <% else %>
             <li><%= link_to "Log in", new_user_session_path %></li>
             <% end %>
+            </li>
           </ul>
+        </ul>
       </nav>
     </div>
  </header>
