--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,34 +13,30 @@
 
 <body>
   <div class="container">
-   <%= render 'layouts/nav' %>
+    <%= render 'layouts/nav' %>
+    <%= render 'layouts/nav_short-text' %>
   </div>
 
 
-          <% if notice %>
-          <p id="notice" class="alert alert-primary"><%= notice %></p>
-          <% end %>
+  <% if notice %>
+  <p id="notice" class="alert alert-primary"><%= notice %></p>
+  <% end %>
 
 
-          <%= yield %>
-          <footer class="container-fluid footer-section">
-            <small>
-              KLAD Consulting
-            </small>
-            <nav>
-              <ul>
-                <li><%= link_to "About", simple_pages_about_path %></li>
-                <li><%= link_to "Contact", simple_pages_contact_path %></li>
-                <li><a href="http://news.railstutorial.org/">News</a></li>
-              </ul>
-            </nav>
-          </footer>
+  <%= yield %>
+  <footer class="container-fluid footer-section">
+    <small>
+      KLAD Consulting
+    </small>
+    <nav>
+      <ul>
+        <li><%= link_to "About", simple_pages_about_path %></li>
+        <li><%= link_to "Contact", simple_pages_contact_path %></li>
+        <li><a href="http://news.railstutorial.org/">News</a></li>
+      </ul>
+    </nav>
+  </footer>
+  <%= render 'layouts/scripts' %>
 
-
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-          <script src="jquery.elevatezoom.js" type="text/javascript"></script>
-          <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
-          <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
-        </body>
-        </html>
+</body>
+</html>
