--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,6 @@
-<div class= "margin">
-<h1>New Product</h1>
 
-<%= render 'shared/form', product: @product %>
+  <h1>New Product</h1>
 
-<div class= "back"><%= link_to 'Back', products_path %></div>
-</div>
+  <%= render 'shared/form', product: @product %>
+
+  <div class= "back margin"><%= link_to 'Back', products_path %></div>
