--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -13,7 +13,7 @@
   width: 90%;
   margin: 0px 40px 0px 40px;}
 
-.submit-button {margin: 30px 0px 0px 40px;}
+.submit-button { margin-top: 40px;}
 
 .send-button { padding-bottom: 40px;}
 
