--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,15 +1,21 @@
 
   <% cache product do %>
-  <div class="col-sm-12 col-md-6 col-lg-4 productindex ">
+  <div class="col-lg-3 col-md-6 col-sm-6 productindex ">
 
     <a href="#"><h4><%= link_to product.name, product %></h4></a>
-    <%= image_tag(product.image_url, class: "img-fluid") if product.image_url %>
+    <%= image_tag(product.image_url, class: "img-fluid product-img") if product.image_url %>
     <p class="description"><%= product.description %></p>
-    <strong><td><%= number_to_currency(product.price, :unit => "€") %></td></strong>
+    <strong><td><%= number_to_currency(product.price, :unit => "€") %><% end %></td></strong>
+
     <br>
-    <td><% if signed_in? && current_user.admin? %><%= link_to 'Edit', edit_product_path(product) %><% end %></td>
-    <td><% if signed_in? && current_user.admin? %><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %><% end %>
-    </td>
-    <% end %>
+
+      <td>
+        <% if signed_in? && current_user.admin? %>
+         <%= link_to 'Edit', edit_product_path(product) %>
+         <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?'} %>
+        <% end %>
+      </td>
+
+
 
   </div><!-- /col -->
