--- a/app/views/shared/_new_comment.html.erb
+++ b/app/views/shared/_new_comment.html.erb
@@ -5,15 +5,13 @@
     <p>
       <%= f.label :body, "Comments" %><br>
       <%= f.text_area :body %>
-    </p>
-    <p><div class="rating">
-      <%= f.label :rating %><br>
-      <% f.text_field :rating, class: "rating" %>
-      </div>
-    </p>
+    </p><br>
+    <div class="rating">
+    <p><%= f.label :rating %></p>
+    <p><% f.text_field :rating, class: "rating" %></p>
+    </div>
 
-    <p>
-      <%= f.submit "Submit" %>
-    </p>
+
+    <p><br><br><%= f.submit "Submit" %></p>
   <% end %>
 <% end %>
