--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -2,4 +2,6 @@
 <h2 class="product">Featured Products:</h2>
 
 <%= render 'shared/carousel' %>
+<%= @featured_product.name %>
+<%= params[:example_key].to_i * 10 %>
 </div>
