--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,29 +24,32 @@
 }
 
 
-
  /* universal */
+
+ .alerts {padding-top: 35px;}
+.alert p {padding-top: 25px;}
+
+ .form-fld{ width: 300px;}
+
+.alert {padding-top: 70px;}
 
 .short-text {display: none;}
  body {
     padding-top: 60px;
   }
-
   section {
     overflow: auto;
   }
-
   textarea {
     resize:vertical;
+    height: 250px;
   }
-
   .center {
     text-align: center;
     h1 {
       margin-bottom: 10px;
     }
   }
-
   .margin { margin: 0% 5% 0% 5%;}
 
   /* typography */
@@ -54,23 +57,20 @@
   h1, h2, h3, h4, h5, h6 {
     line-height: 1;
   }
-
   h1 {
     font-size: 3em;
     letter-spacing: -2px;
     margin-bottom: 30px;
     text-align: center;
   }
-
   h2 {
-    font-size: 1.2em;
+    font-size: 1.5em;
     letter-spacing: -1px;
     margin-bottom: 30px;
     text-align: center;
     font-weight: normal;
     color: $gray-light;
   }
-
   p {
     font-size: 1.1em;
     line-height: 1.7em;
@@ -92,18 +92,99 @@
       text-decoration: none;
     }
   }
-
   .navrbar-inverse a {
     color: white;
   }
-
   .navbar-inverse .navbar-nav > li > a { color: white;}
-
   body .links {
     font-size: 1.3em;
     color: green;
   }
   .navbar-inverse {background-color: #A1D1BE;}
+
+  /* simple_pages*/
+
+#carousel h5 {
+  font-size: 4em;
+  padding-bottom: 30%;
+  text-shadow: -1px 0 black, 0 1
+}
+
+#carousel { padding-top: 20px;}
+.contact {padding-top: 35px;}
+
+/* universal */
+
+.short-text {display: none;}
+ body {
+    padding-top: 60px;
+  }
+  section {
+    overflow: auto;
+  }
+  textarea {
+    resize:vertical;
+    height: 250px;
+  }
+  .center {
+    text-align: center;
+    h1 {
+      margin-bottom: 10px;
+    }
+  }
+  .margin { margin: 0% 5% 0% 5%;}
+
+  /* typography */
+
+  h1, h2, h3, h4, h5, h6 {
+    line-height: 1;
+  }
+  h1 {
+    font-size: 3em;
+    letter-spacing: -2px;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  h2 {
+    font-size: 1.5em;
+    letter-spacing: -1px;
+    margin-bottom: 30px;
+    text-align: center;
+    font-weight: normal;
+    color: $gray-light;
+  }
+  p {
+    font-size: 1.1em;
+    line-height: 1.7em;
+  }
+
+  /* header */
+
+  #logo {
+    float: left;
+    margin-right: 10px;
+    font-size: 1.7em;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    padding-top: 9px;
+    font-weight: bold;
+    &:hover {
+      color: yellow;
+      text-decoration: none;
+    }
+  }
+  .navrbar-inverse a {
+    color: white;
+  }
+  .navbar-inverse .navbar-nav > li > a { color: white;}
+  body .links {
+    font-size: 1.3em;
+    color: green;
+  }
+  .navbar-inverse {background-color: #A1D1BE;}
+
+
   /* footer */
 
   footer {
@@ -173,11 +254,9 @@
    margin-bottom: 15px;
    @include box_sizing;
  }
-
  input {
    height: auto !important;
  }
-
  #error_explanation {
    color: red;
    ul {
@@ -185,14 +264,12 @@
      margin: 0 0 30px 0;
    }
  }
-
  .field_with_errors {
    @extend .has-error;
    .form-control {
      color: $state-danger-text;
    }
  }
-
  .checkbox {
    margin-top: -10px;
    margin-bottom: 10px;
@@ -201,7 +278,6 @@
      font-weight: normal;
    }
  }
-
  #session_remember_me {
    width: auto;
    margin-left: 0;
