--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,11 @@
-<footer class="footer">
+<footer class="container-fluid footer-section">
   <small>
-    The <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
+    Made by <a href="https://goofy-hypatia-4ab2f0.netlify.com">Kevin Louis Dath</a>
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
+      <li><%= link_to "About", simple_pages_about_path %></li>
+      <li><%= link_to "Contact", simple_pages_contact_path %></li>
       <li><a href="https://www.be-mag.com/category/news/">News</a></li>
     </ul>
   </nav>
