--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -184,7 +184,11 @@
   }
   .navbar-inverse {background-color: #A1D1BE;}
 
-
+  .search-bar {
+    margin-right: 40%;
+    position: relative;}
+  .btn {max-width: 25%;}
+  .form-fld {max-width: 60%;}
   /* footer */
 
   footer {
