--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,6 +1,6 @@
 
   <% cache product do %>
-  <div class="col-lg-3 col-md-6 col-sm-6 productindex ">
+  <div class="col-lg-3 col-md-3 col-sm-12">
 
     <a href="#"><h4><%= link_to product.name, product %></h4></a>
     <%= image_tag(product.image_url, class: "img-fluid product-img") if product.image_url %>
