--- a/app/views/products/_product_display.html.erb
+++ b/app/views/products/_product_display.html.erb
@@ -4,14 +4,13 @@
     <%= link_to 'Edit', edit_product_path(@product) %>
   <% end %>
 
-  <%= image_tag(@product.image_url, width: "350", class: "img-fluid img-zoom product-img", data_zoom_image:"@product.image_url") if @product.image_url%>
+  <div><%= image_tag(@product.image_url, width: "100%", class: "img-fluid img-zoom product-img", data_zoom_image:"@product.image_url") if @product.image_url%></div>
   <div>
   <% cache @product do %>
   <p><h2><%= @product.name %></h2></p>
   <p><%= @product.description %></p>
   <% end %>
   </div>
-  <p class="text-bold">Overview</p>
   <p class="price-tag"><%= number_to_currency(@product.price, :unit => "€") %></p>
   <p><%= render partial: "shared/stripe_checkout_button" %></p>
 </div>
